# Sonora-Digital-Corp

./: .env.ci  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vercel.json  .vercelignore  AGENTS.md  CLAUDE.md  Makefile  PLAN-OVH-MIGRATION.md  README.md  blueprint-presentation.html  fleet.yml  harnesses  initiatives  metrics  middleware.js  mission-control.html  opencode.json  package-lock.json  package.json  playwright.config.ts  presentacion-dia.html  pyproject.toml  requirements.txt  sdc-architecture-blueprint.html  skills  speech-abe-fenix.md  src  truth  vercel.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.opencode/: opencode.json
.planning/: PROJECT.md
.specify/: extensions.yml  feature.json  init-options.json
agenda/: AGENDA.md
agents/: TEMPLATE-agent.md  __init__.py  base.py  index.yaml  registry.yaml  runtime.py  types.py
apps/: abe-service  abe_service  content-server  google-mcp
brand/: BRAND-GUIDE.md
call-engine/: go.mod  go.sum  package.json
campaigns/: campaign-ecommerce-20260719.txt
capabilities/: REGISTRY.md  bus.py  index.yaml
collectors/: base.py  registry.yaml  scheduler.py
config/: .env.example  abe-music.json  abe-system.json  ambassadors.yaml  artists.json  client-signals.yaml  clone-schema.sql  coming-soon-script.md  content-agenda.json  cost-rates.yaml  design-tokens.json  engram-autocapture.service  hermes-config.yaml  machines.json  od-daemon.service  onboarding.yaml  packages.yaml  plugins.json  pricing-tiers.yaml  providers.json  registry.json  schedule.json  (+5 more)
(+3141 files in other folders)
