[project]
name = "jarvis"
version = "2.0.0"
description = "JARVIS — Multi-agent AI Platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042", "E402", "UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["asyncio: async tests"]

[tool.coverage.run]
source = ["src/core", "webui", "voice"]
omit = ["*/tests/*", "*/venv/*", "*/hermes-env/*"]

[tool.coverage.report]
fail_under = 80
