[project]
name = "jarvis"
version = "2.0.0"
description = "JARVIS — Multi-agent AI Platform"
requires-python = ">=3.10"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042", "E402", "UP017"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals", "memory/tests"]
asyncio_mode = "auto"
markers = ["asyncio: async tests"]

[tool.coverage.run]
source = ["apps", "memory", "core", "scripts", "metrics"]
omit = ["*/tests/*", "*/venv/*", "*/node_modules/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 60

[tool.pytest-bdd]
features_base = "gherkin/"
